--- a/src/main/resources/org/iesalandalus/programacion/reservashotel/vista/grafica/recursos/vistas/ventanaHabitaciones.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/reservashotel/vista/grafica/recursos/vistas/ventanaHabitaciones.fxml
@@ -11,17 +11,20 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane dividerPositions="0.6204819277108434" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.reservashotel.vista.grafica.controladores.ControladorVentanaHuespedes">
+<SplitPane dividerPositions="0.6971925133689838" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.iesalandalus.programacion.reservashotel.vista.grafica.controladores.ControladorVentanaHabitaciones">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
          <children>
-            <TableView fx:id="tvHuespedes" layoutX="-1.0" prefHeight="368.0" prefWidth="898.0">
+            <TableView fx:id="tvHabitaciones" layoutX="-1.0" prefHeight="414.0" prefWidth="898.0">
               <columns>
-                <TableColumn fx:id="tcNombre" prefWidth="298.4000305533409" text="Nombre" />
-                <TableColumn fx:id="tcDNI" prefWidth="95.199951171875" text="DNI" />
-                  <TableColumn fx:id="tcCorreo" prefWidth="272.0000305175781" text="Correo electrónico" />
-                  <TableColumn fx:id="tcTelefono" prefWidth="101.60003662109375" text="Teléfono" />
-                  <TableColumn fx:id="tcFechaNacimiento" prefWidth="134.4000244140625" text="Fecha de nacimiento" />
+                <TableColumn fx:id="tcIdentificador" prefWidth="112.0" text="Identificador" />
+                <TableColumn fx:id="tcPlantaPuerta" prefWidth="112.0" text="Planta - puerta" />
+                  <TableColumn fx:id="tcTipo" prefWidth="112.0" text="Tipo" />
+                  <TableColumn fx:id="tcCamasIndividuales" prefWidth="113.0" text="Camas Individuales" />
+                  <TableColumn fx:id="tcCamasDobles" prefWidth="112.0" text="Camas dobles" />
+                  <TableColumn fx:id="tcBanos" prefWidth="112.0" text="Baños" />
+                  <TableColumn fx:id="tcJacuzzi" prefWidth="112.0" text="Jacuzzi" />
+                  <TableColumn fx:id="tcPrecio" prefWidth="112.0" text="Precio" />
               </columns>
             </TableView>
          </children></AnchorPane>
@@ -31,16 +34,16 @@
                <children>
                   <VBox prefHeight="185.0" prefWidth="716.0">
                      <children>
-                        <HBox prefHeight="60.0" prefWidth="716.0">
+                        <HBox prefHeight="94.0" prefWidth="716.0">
                            <children>
                               <VBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="202.0">
                                  <children>
-                                    <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" text="Búsqueda por nombre:" />
+                                    <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" text="Búsqueda por identificador:" />
                                  </children>
                               </VBox>
                               <VBox alignment="CENTER" prefHeight="50.0" prefWidth="513.0">
                                  <children>
-                                    <TextField fx:id="tfBusquedaNombre" prefHeight="26.0" prefWidth="393.0">
+                                    <TextField fx:id="tfBusquedaIdentificador" prefHeight="26.0" prefWidth="393.0">
                                        <VBox.margin>
                                           <Insets left="5.0" right="100.0" />
                                        </VBox.margin>
@@ -49,38 +52,11 @@
                               </VBox>
                            </children>
                         </HBox>
-                        <HBox prefHeight="60.0" prefWidth="716.0">
-                            <children>
-                                <VBox alignment="CENTER_RIGHT" prefHeight="80.0" prefWidth="202.0">
-                                    <children>
-                                        <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" text="Búsqueda por DNI:" />
-                                    </children>
-                                </VBox>
-                                <VBox alignment="CENTER" prefHeight="50.0" prefWidth="513.0">
-                                    <children>
-                                        <TextField fx:id="tfBusquedaDNI">
-                                            <VBox.margin>
-                                                <Insets left="5.0" right="100.0" />
-                                            </VBox.margin>
-                                        </TextField>
-                                    </children>
-                                </VBox>
-                            </children>
-                        </HBox>
                         <HBox layoutX="10.0" layoutY="80.0" prefHeight="50.0" prefWidth="716.0">
                            <children>
-                              <VBox alignment="CENTER_RIGHT" prefHeight="70.0" prefWidth="449.0">
+                              <VBox alignment="TOP_CENTER" prefHeight="50.0" prefWidth="716.0">
                                  <children>
-                                    <Button fx:id="btnBuscarHuesped" mnemonicParsing="false" onAction="#buscar" text="Buscar">
-                                       <VBox.margin>
-                                          <Insets right="10.0" />
-                                       </VBox.margin>
-                                    </Button>
-                                 </children>
-                              </VBox>
-                              <VBox alignment="CENTER_LEFT" prefHeight="70.0" prefWidth="450.0">
-                                 <children>
-                                    <Button fx:id="btnLimpiarHuesped" mnemonicParsing="false" onAction="#limpiar" text="Limpiar">
+                                    <Button fx:id="btnLimpiarIdentificador" mnemonicParsing="false" onAction="#limpiarIdentificador" text="Limpiar">
                                        <VBox.margin>
                                           <Insets left="10.0" />
                                        </VBox.margin>
