--- a/src/main/resources/org/iesalandalus/programacion/reservashotel/vista/grafica/recursos/vistas/ventanaPrincipal.fxml
+++ b/src/main/resources/org/iesalandalus/programacion/reservashotel/vista/grafica/recursos/vistas/ventanaPrincipal.fxml
@@ -61,7 +61,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Añadir">
           <items>
-            <MenuItem fx:id="btnAnadirHuesped" mnemonicParsing="false" onAction="#anadirHuesped" text="Huésped" />
+            <MenuItem fx:id="btnAnadirHuesped" mnemonicParsing="false" onAction="#anadirHuespedMenu" text="Huésped" />
             <MenuItem mnemonicParsing="false" text="Habitación" />
             <MenuItem mnemonicParsing="false" text="Reserva" />
           </items>
@@ -73,7 +73,7 @@
             </Menu>
         <Menu mnemonicParsing="false" text="Ayuda">
           <items>
-            <MenuItem mnemonicParsing="false" text="Acerca de..." />
+            <MenuItem fx:id="miAcercaDe" mnemonicParsing="false" onAction="#acercaDe" text="Acerca de..." />
           </items>
         </Menu>
       </menus>
@@ -87,12 +87,12 @@
                         <TableView id="tvReservas" fx:id="tvReservas" layoutX="-1.0" layoutY="48.0" prefHeight="290.0" prefWidth="900.0">
                           <columns>
                             <TableColumn fx:id="tcHuesped" editable="false" prefWidth="200.0" text="Huésped" />
-                            <TableColumn fx:id="tcHabitacion" editable="false" prefWidth="140.0" text="Habitación" />
-                              <TableColumn fx:id="tcImporte" editable="false" prefWidth="70.0" sortable="false" text="Importe" />
-                              <TableColumn fx:id="tcFechaInicio" editable="false" prefWidth="110.0" text="Fecha Inicio" />
-                              <TableColumn fx:id="tcFechaFin" editable="false" prefWidth="110.0" text="Fecha Fin" />
-                              <TableColumn fx:id="tcCheckIn" editable="false" prefWidth="135.0" text="CheckIn" />
-                              <TableColumn fx:id="tcCheckOut" editable="false" prefWidth="135.0" text="CheckOut" />
+                            <TableColumn fx:id="tcHabitacion" editable="false" prefWidth="140.0" style="-fx-alignment: CENTER;" text="Habitación" />
+                              <TableColumn fx:id="tcImporte" editable="false" prefWidth="70.0" sortable="false" style="-fx-alignment: CENTER;" text="Importe" />
+                              <TableColumn fx:id="tcFechaInicio" editable="false" prefWidth="110.0" style="-fx-alignment: CENTER;" text="Fecha Inicio" />
+                              <TableColumn fx:id="tcFechaFin" editable="false" prefWidth="110.0" style="-fx-alignment: CENTER;" text="Fecha Fin" />
+                              <TableColumn fx:id="tcCheckIn" editable="false" prefWidth="130.0" style="-fx-alignment: CENTER;" text="CheckIn" />
+                              <TableColumn fx:id="tcCheckOut" editable="false" prefWidth="130.0" style="-fx-alignment: CENTER;" text="CheckOut" />
                           </columns>
                         </TableView>
                      </children>
@@ -208,6 +208,11 @@
                                              </GridPane.margin>
                                           </TextField>
                                           <Button fx:id="btnFiltrarPorHabitacion" alignment="CENTER" contentDisplay="CENTER" layoutX="285.0" layoutY="132.0" mnemonicParsing="false" onAction="#filtrarPorHabitacion" prefWidth="130.0" text="Filtrar por Habitación" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                             <GridPane.margin>
+                                                <Insets left="140.0" />
+                                             </GridPane.margin>
+                                          </Button>
+                                          <Button fx:id="btnEliminarFiltro" alignment="CENTER" contentDisplay="CENTER" layoutX="285.0" layoutY="170.0" mnemonicParsing="false" onAction="#LimpiarFiltro" prefWidth="130.0" text="Eliminar Filtro" GridPane.columnIndex="1" GridPane.rowIndex="5">
                                              <GridPane.margin>
                                                 <Insets left="140.0" />
                                              </GridPane.margin>
